# uniteapi-scraper

./: .gitignore  pyproject.toml
src/unite_api_client/: __main__.py  arg_parse.py  build.py  db_client.py  handle_database.py  paint.py  pokemon.py  unite_api_client.py
tests/: test_build.py  test_pokemon.py  test_unite_api_client.py
