[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unite_api_client"
version = "0.0.1"
dependencies = [
    "pytest",
    "pytest-cov",
    "pillow",
    "flask",
    "requests",
    "beautifulsoup4"
    ]
authors = [
    { name = "Adriano Rodrigues de Paula", email = "adrianordp1@gmail.com"},
]
#[project.scripts]
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

description = """
Get data from Unite API
"""
readme = "README.md"