[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unite_api_client"
version = "1.0.0"
dependencies = [
    "pillow",
    "flask",
    "httpx",
    "beautifulsoup4",
    "numpy",
    ]
authors = [
    { name = "Adriano Rodrigues de Paula", email = "adrianordp1@gmail.com"},
]

description = """
Get data from Unite API
"""
readme = "README.md"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[project.scripts]
unite_api_client = "unite_api_client.__main__:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
